--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!--<![endif]-->
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Religion by age and sex - Office for National Statistics (ONS)</title>
+    <title>Chart embeds instructions</title>
     <meta charset="utf-8" />
     <meta content="width=device-width,initial-scale=1.0" name="viewport" />
     <meta content="on" http-equiv="cleartype" />
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="https://www.ons.gov.uk/assets/css/main.css"/>
     <!--[endif]-->
     <script src="https://www.ons.gov.uk/js/header.js"></script>
+    <link href="css/prism.css" rel="stylesheet" />
 </head>
 <body class="">
 
@@ -30,7 +31,7 @@
         <div class="header col-wrap">
             <div class="col col--lg-one-third col--md-one-third">
                 <a href="https://www.ons.gov.uk/">
-                    <img class="main-logo" src="https://www.ons.gov.uk/assets/img/ons-logo.png" alt="Office for National Statistics">
+                    <img class="main-logo" src="https://cdn.ons.gov.uk/assets/images/ons-logo.png" alt="Office for National Statistics">
                 </a>
             </div>
             <div class="col col--lg-two-thirds col--md-two-thirds print--hide">&nbsp;</div>
@@ -44,7 +45,9 @@
         </div>
     </div>
 </nav>
-
+<div class="background--ship-grey">
+    &nbsp;
+</div>
 <div class="page-intro background--gallery">
     <div class="wrapper">
         <div class="col-wrap">
@@ -52,10 +55,10 @@
 
                 <div class="col col--md-47 col--lg-48">
                     <h1 class="page-intro__title ">
-                        Chart embeds instructions
+                        Chart embed instructions
                     </h1>
                     <p class="page-intro__content">
-                        Embed charts from our Statistical bulletins, articles and compendia in your own website.
+                        Embed charts from our Statistical bulletins, articles and compendia in your own website. Please not this functionality is still at an early stage of development. We will be looking at making this simpler and clearer from the content in the near future.
                     </p>
                 </div>
             </div>
@@ -70,25 +73,64 @@
         <!-- full column -->
         <div class="col-wrap">
             <div class="col col--md-one col--lg-one">
-                <p>full column</p>
+              <h2>Using an iframe</h2>
+              <pre><code class="language-javascript">
+&#x3C;iframe src=&#x22;https://www.ons.gov.uk/embed?uri=/economy/inflationandpriceindices/bulletins/consumerpriceinflation/sept2016/cc765147&#x26;notes=false&#x26;source=false&#x26;subtitle=false&#x26;title=false&#x22; width= &#x22;475&#x22; height= &#x22;356&#x22; frameborder=&#x22;0&#x22;&#x3E;&#x3C;/iframe&#x3E;
+              </code></pre>
+              <iframe src="https://www.ons.gov.uk/embed?uri=/economy/inflationandpriceindices/bulletins/consumerpriceinflation/sept2016/cc765147&notes=false&source=false&subtitle=false&title=false" width= "475" height= "356" frameborder="0"></iframe>
+              <hr>
+              <h2>Using Pym</h2>
+                  <pre><code class="language-markup">
+&#x3C;div id=&#x22;chart1&#x22;&#x3E;&#x3C;/div&#x3E;
+                  </code></pre>
+                  <pre><code class="language-javascript">
+&#x3C;script type=&#x22;text/javascript&#x22; src=&#x22;https://pym.nprapps.org/pym.v1.min.js&#x22;&#x3E;&#x3C;/script&#x3E;
+                  </code></pre>
+                  <pre><code class="language-javascript">
+&#x3C;script&#x3E;
+var pymParent = new pym.Parent(&#x27;chart1&#x27;, &#x22;https://www.ons.gov.uk/embed?uri=/economy/inflationandpriceindices/bulletins/consumerpriceinflation/sept2016/cc765147&#x22;, {});
+&#x3C;/script&#x3E;
+                    </code></pre>
+              <h3>Available true/false flags</h3>
+              The following flags are available to customise the display of the chart and follow the format <strong>"&#x26;notes=false"</strong>. By default all are set to <strong>"true"</strong>.
+                  <ul>
+                    <li>title</li>
+                    <li>subtitle</li>
+                    <li>source</li>
+                    <li>notes</li>
+                  </ul>
+
+
             </div>
         </div>
 
         <!-- half columns -->
         <div class="col-wrap">
             <div class="col col--md-half col--lg-half">
-                <div id="chart1"></div>
-                <script type="text/javascript" src="https://pym.nprapps.org/pym.v1.min.js"></script>
-                <script>
-                    var pymParent = new pym.Parent('chart1', "https://www.ons.gov.uk/embed?uri=/economy/inflationandpriceindices/bulletins/consumerpriceinflation/sept2016/cc765147", {});
-                </script>
-            </div>
-            <div class="col col--md-half col--lg-half">
+              <h3>Chart with all options displayed</h3>
+              <pre><code class="language-javascript">
+var pymParent = new pym.Parent(&#x27;chart2&#x27;,
+&#x22;https://www.ons.gov.uk/embed?uri=/economy/inflationandpriceindices/bulletins/consumerpriceinflation/sept2016/cc765147&#x22;, {});
+              </code></pre>
                 <div id="chart2"></div>
                 <script type="text/javascript" src="https://pym.nprapps.org/pym.v1.min.js"></script>
                 <script>
-                    var pymParent = new pym.Parent('chart2', "https://www.ons.gov.uk/embed?uri=/economy/inflationandpriceindices/bulletins/consumerpriceinflation/sept2016/cc765147", {});
+                var pymParent = new pym.Parent('chart2', "https://www.ons.gov.uk/embed?uri=/economy/inflationandpriceindices/bulletins/consumerpriceinflation/sept2016/cc765147", {});
                 </script>
+            </div>
+
+            <div class="col col--md-half col--lg-half">
+              <h3>Just the chart</h3>
+              <pre><code class="language-javascript">
+var pymParent = new pym.Parent(&#x27;chart3&#x27;,
+&#x22;https://www.ons.gov.uk/embed?uri=/economy/inflationandpriceindices/bulletins/consumerpriceinflation/sept2016/cc765147&#x26;notes=false&#x26;source=false&#x26;subtitle=false&#x26;title=false&#x22;, {});
+              </code></pre>
+                <div id="chart3"></div>
+                <script type="text/javascript" src="https://pym.nprapps.org/pym.v1.min.js"></script>
+                <script>
+                    var pymParent = new pym.Parent('chart3', "https://www.ons.gov.uk/embed?uri=/economy/inflationandpriceindices/bulletins/consumerpriceinflation/sept2016/cc765147&notes=false&source=false&subtitle=false&title=false", {});
+                </script>
+
             </div>
         </div>
 
@@ -97,31 +139,24 @@
         <span>Skip to main content</span>
     </a>
 </div>
+<br>
 
-<div class="wrapper">
-    <nav class="grid-wrap">
-
-    </nav>
-</div>
-
-<footer class="global-footer">
+<footer class="print--hide">
     <h2 class="visuallyhidden">Footer links</h2>
-
-        <!-- /wrapper -->
-    </div>
-    <!-- /slate -->
-    <div class="slate--mid-grey">
-        <div class="wrapper">
-            <div class="footer__license">
-                <img class="footer__license__img" alt="OGL" width="60" src="https://www.ons.gov.uk/img/ogl.png">
-                <p class="footer__license__body">
-                    All content is available under the Open Government Licence v2.0, except where otherwise stated
+        <div class="footer">
+            <div class="wrapper">
+                <div class="footer-license">
+                    <img class="footer-license__img" alt="OGL" width="60" src="https://www.ons.gov.uk/img/ogl.png">
+                    <p class="footer-license__text margin-left-sm--0">
+                        All content is available under the <a class="icon--hide" href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open Government Licence v3.0</a> <span class="icon icon-external--light-small"></span>, except where otherwise stated
                 </p>
             </div>
         </div>
     </div>
-</footer>
+ </footer>
 
 <script src="https://www.ons.gov.uk/dist/js/footer.js"></script>
+<script src="js/prism.js"></script>
+
 </body>
 </html>
