--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         Chart embed instructions
                     </h1>
                     <p class="page-intro__content">
-                        Embed charts from our Statistical bulletins, articles and compendia in your own website. Please not this functionality is still at an early stage of development. We will be looking at making this simpler and clearer from the content in the near future.
+                        Reuse the interactive charts from any of our <a href = "https://www.ons.gov.uk/publications">publications</a> in your own website. Please not this functionality is still at an early stage of development. We will be looking at making this simpler and clearer from the content in the near future.
                     </p>
                 </div>
             </div>
@@ -70,16 +70,45 @@
 <div class="slate">
     <div class="wrapper">
 
-        <!-- full column -->
         <div class="col-wrap">
             <div class="col col--md-one col--lg-one">
-              <h2>Using an iframe</h2>
+                    <h2>Obtain the URL to use for the embed</h2>
+                    <p>Currently this part of the process is a manual step as this functionality has not yet been integrated into the pages themselves on the website. We are currently investigating how we will best do this and these instructions will be updated once this has been implemented.</p>
+                    <p>To embed the chart you first need the URL of our 'embed' version. This will allow the chart to be customised in terms of what fields are displayed but also allow the chart to be used on another domain.</p>
+                    <p>Below each chart on the website there are the following options.
+                    <section class="section__content--markdown js-sticky-toc__section">
+                    <div class="markdown-chart-container panel--bottom-mar print--avoid-break">
+                    <h5 class="print--hide font-size--h6">Download this chart</h5>
+                    <a class="btn btn--primary print--hide js-chart-image-src" href="https://www.ons.gov.uk/chartimage?uri=/economy/inflationandpriceindices/bulletins/consumerpriceinflation/sept2016/8ec279b8" download="Figure 5: RPI and RPIJ 12-month rates for the last 10 years: September 2006 to September 2016">Image</a>
+                    <a class="btn btn--primary print--hide" title="Download as csv" href="https://www.ons.gov.uk/generator?uri=/economy/inflationandpriceindices/bulletins/consumerpriceinflation/sept2016/8ec279b8&amp;format=csv">.csv</a>
+                    <a class="btn btn--primary print--hide" title="Download as xls" href="https://www.ons.gov.uk/generator?uri=/economy/inflationandpriceindices/bulletins/consumerpriceinflation/sept2016/8ec279b8&amp;format=xls">.xls</a>
+                    </div>
+                    </section>
+                    <p>Currently you will need to copy and amend the link from the image button. the way to do this will vary by browser, but from Chrome you can right-click and select 'Copy Link Address'.
+                    <p>This will give you the URL of the chart image. <br> For example:
+      https://www.ons.gov.uk/chartimage?uri=/economy/inflationandpriceindices/bulletins/consumerpriceinflation/sept2016/cc765147 </p>
+                    <p>To give you the URL to embed replace <strong>chartimage</strong> with <strong>embed</strong>.<br>To give you:
+      https://www.ons.gov.uk/embed?uri=/economy/inflationandpriceindices/bulletins/consumerpriceinflation/sept2016/cc765147
+                    </p>
+                    <p>This will be the basis for embeding the chart. There are currently two options for how you can do this.
+                    <hr>
+            </div>
+        </div>
+
+        <div class="col-wrap">
+            <div class="col col--md-one col--lg-one">
+              <h2>Simple method; using an iframe</h2>
+              <p>Once you have the URL to embed the simplest method it to use an iframe to add this into your page. An example is shown below. The size of the chart will then be controlled by the width and height attributes.</p>
               <pre><code class="language-javascript">
 &#x3C;iframe src=&#x22;https://www.ons.gov.uk/embed?uri=/economy/inflationandpriceindices/bulletins/consumerpriceinflation/sept2016/cc765147&#x26;notes=false&#x26;source=false&#x26;subtitle=false&#x26;title=false&#x22; width= &#x22;475&#x22; height= &#x22;356&#x22; frameborder=&#x22;0&#x22;&#x3E;&#x3C;/iframe&#x3E;
               </code></pre>
               <iframe src="https://www.ons.gov.uk/embed?uri=/economy/inflationandpriceindices/bulletins/consumerpriceinflation/sept2016/cc765147&notes=false&source=false&subtitle=false&title=false" width= "475" height= "356" frameborder="0"></iframe>
               <hr>
-              <h2>Using Pym</h2>
+
+
+              <h2>Responsive method; using Pym.js</h2>
+              <p>Using iframes in a responsive page can be more difficult as sizing its height is tricky — especially if the content of the iframe changes height depending on page width (for example, because of text wrapping or media queries) or events within the iframe. To get round this we use <a href = "http://blog.apps.npr.org/pym.js/">Pym.js</a>.</p>
+              <p>To embed a chart using pym you will need the following (amending the chart name and URL as appropriate);
                   <pre><code class="language-markup">
 &#x3C;div id=&#x22;chart1&#x22;&#x3E;&#x3C;/div&#x3E;
                   </code></pre>
@@ -91,20 +120,19 @@
 var pymParent = new pym.Parent(&#x27;chart1&#x27;, &#x22;https://www.ons.gov.uk/embed?uri=/economy/inflationandpriceindices/bulletins/consumerpriceinflation/sept2016/cc765147&#x22;, {});
 &#x3C;/script&#x3E;
                     </code></pre>
-              <h3>Available true/false flags</h3>
-              The following flags are available to customise the display of the chart and follow the format <strong>"&#x26;notes=false"</strong>. By default all are set to <strong>"true"</strong>.
+              <hr>
+              <h2>Customise the chart: available true/false flags</h2>
+              The fields displayed by the chart are customisable and the following flags are available. These follow the format <strong>"&#x26;notes=false"</strong>. By default all are set to <strong>"true"</strong>.
                   <ul>
                     <li>title</li>
                     <li>subtitle</li>
                     <li>source</li>
                     <li>notes</li>
                   </ul>
-
-
             </div>
         </div>
 
-        <!-- half columns -->
+
         <div class="col-wrap">
             <div class="col col--md-half col--lg-half">
               <h3>Chart with all options displayed</h3>
@@ -134,11 +162,13 @@ var pymParent = new pym.Parent(&#x27;chart3&#x27;,
             </div>
         </div>
 
+
     </div>
     <a class="skiplink visuallyhidden focusable" href="#main" tabindex="0">
         <span>Skip to main content</span>
     </a>
 </div>
+
 <br>
 
 <footer class="print--hide">
