Correct capital letter

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <a class="btn btn--primary print--hide" title="Download as xls" href="https://www.ons.gov.uk/generator?uri=/economy/inflationandpriceindices/bulletins/consumerpriceinflation/sept2016/8ec279b8&amp;format=xls">.xls</a>
                     </div>
                     </section>
-                    <p>Currently you will need to copy and amend the link from the image button. the way to do this will vary by browser, but from Chrome you can right-click and select 'Copy Link Address'.
+                    <p>Currently you will need to copy and amend the link from the image button. The way to do this will vary by browser, but from Chrome you can right-click and select 'Copy Link Address'.
                     <p>This will give you the URL of the chart image. <br> For example:
       https://www.ons.gov.uk/chartimage?uri=/economy/inflationandpriceindices/bulletins/consumerpriceinflation/sept2016/cc765147 </p>
                     <p>To give you the URL to embed replace <strong>chartimage</strong> with <strong>embed</strong>.<br>To give you:
