Add event tracking

--- a/Retail Sales.html
+++ b/Retail Sales.html
@@ -24,6 +24,16 @@
         <!--[endif]---->
 	</head>
 	<body class="bulletin">
+		
+		<script type="text/javascript">
+var _mfq = _mfq || [];
+  (function() {
+    var mf = document.createElement("script");
+    mf.type = "text/javascript"; mf.async = true;
+    mf.src = "//cdn.mouseflow.com/projects/b55c5530-f892-4e94-ba67-8e5a0d8206e0.js";
+    document.getElementsByTagName("head")[0].appendChild(mf);
+  })();
+</script>
 
 
 
