--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <link rel="stylesheet" href="https://www.ons.gov.uk/dist/css/oldie.css"/>
     <![endif]-->
     <!--[if gt IE 8]><!-->
-    <link rel="stylesheet" href="https://www.ons.gov.uk/assets/css/main.css"/>
+    <link rel="stylesheet" href="https://cdn.ons.gov.uk/sixteens/6cc1837/css/main.css"/>
     <!--[endif]-->
-    <script src="https://www.ons.gov.uk/js/header.js"></script>
+    <script src="https://cdn.ons.gov.uk/sixteens/6cc1837/js/main.js"></script>
     <link href="css/prism.css" rel="stylesheet" />
 </head>
 <body class="">
@@ -31,7 +31,7 @@
         <div class="header col-wrap">
             <div class="col col--lg-one-third col--md-one-third">
                 <a href="https://www.ons.gov.uk/">
-                    <img class="main-logo" src="https://cdn.ons.gov.uk/assets/images/ons-logo.png" alt="Office for National Statistics">
+                    <img class="logo" src="https://cdn.ons.gov.uk/assets/images/ons-logo.svg" alt="Office for National Statistics">
                 </a>
             </div>
             <div class="col col--lg-two-thirds col--md-two-thirds print--hide">&nbsp;</div>
